--- a/reg.html
+++ b/reg.html
@@ -1,3 +1,11 @@
 <html>
+  <head>
+    <title>Registration</title>
+  </head>
+  <body>
+    <h1>Form</h1>
+    Name:<input type="text"><br>
+    Phone no:<input type="number"><br>
+  </body>
 
 </html>
